@@ -1,10 +1,11 @@
 Changelog
 
-$Id: Changes,v 1.54 2011-02-12 18:14:12 oops Exp $
+$Id: Changes,v 1.55 2011-02-12 20:19:49 oops Exp $
 
-* Sat, Feb 13 2011
+* Sat, Feb 14 2011
 	- fixed trim that return 0 byte about 1byte string
 	- thread safe about errno
+	- rewrite str2double
 
 * Sun, Feb  8 2011
 	- add addslashes_r for binary safe
